--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 
  body {
-  background: linear-gradient(70deg, #e6e6e6, #f7f7f7);
+  background: linear-gradient(70deg, #383838, #858585);
   color: #514B64;
   min-height: 100vh;
 }
@@ -30,4 +30,12 @@ code {
 .abcd {
   min-width: 5em;
   flex: 1;
+}
+
+.blur{
+  box-shadow: 0px 10px 15px 5px rgb(122, 122, 122);
+}
+
+.spec_back{
+  background: linear-gradient(70deg, #0400da, #5c0199);
 }
